GNOME Bugzilla – Bug 720036
info: return existing debug category when registering a category twice (regression)
Last modified: 2013-12-07 19:08:23 UTC
If a category with the same name is found when creating a new one, the found category is returned.
Created attachment 263720 [details] [review] info: return the found category
commit 9a62f007fc21bf4eddcdffa8b2b1ab242d7ff6a0 Author: Tim-Philipp Müller <tim@centricular.com> Date: Sat Dec 7 19:04:16 2013 +0000 tests: add unit test for registering the same category twice commit 24a766a13b05a2d06bf9db24abf77eafe3f1f000 Author: Víctor Manuel Jáquez Leal <vjaquez@igalia.com> Date: Sat Dec 7 19:32:58 2013 +0100 info: return existing category if a debug category is registered twice If a category with the same name is found when creating a new one, the found category is returned instead of an invalid pointer. Fixes issue with gst-vaapi (which uses an internal copy of the codec parsers) caused by commit ccba9130. https://bugzilla.gnome.org/show_bug.cgi?id=720036